test/files/neg/t12322b.check
t12322b.scala:9: error: class type required but MyObj.type found
    val mo: MyObj.type = new MyObj.type() // here
                                  ^
1 error
